--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,9 @@
 body {
-	background-color: aqua;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	.hello {
+		font-size: 2rem;
+		margin: 50px auto;
+	}
 }
